# customer-sdk-py

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/orogen_sdk/: __init__.py  client.py  nonce.py  types.py  verify.py
tests/: test_basic.py
