[project]
name = "orogen-sdk"
version = "0.1.0"
description = "Python SDK for the Orogen — OpenAI-compatible client with on-chain settlement"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Orogen Labs" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "openai>=1.40",
    "mining-types",
]

[tool.uv.sources]
mining-types = { git = "https://github.com/orogen-network/mining-types.git", rev = "9e6d3127ce85622c65d994843be57f7efcc632b4" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orogen_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
